--- a/PMS-PropertyHapa.Staff/Views/Reports/TenantReports.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Reports/TenantReports.cshtml
@@ -224,7 +224,7 @@
         </div>
         <div class="row mb-3">
             <div class="col-md-12">
-                <label class="col-sm-12 mb-0 font-weight-bold">Tenant Type</label>
+                <label class="col-sm-12 mb-0 font-weight-bold">Invoice Type</label>
                 <div col-sm-12>
                     <select id="isPaidInvoicesOffcanvas" multiple name="isPaidInvoicesOffcanvas" class="form-control select2">
                         <option value="1">Paid</option>
@@ -235,7 +235,7 @@
         </div>
         <div class="row mb-3">
             <div class="col-md-12">
-                <label class="col-sm-12 mb-0 font-weight-bold">Tenant Type</label>
+                <label class="col-sm-12 mb-0 font-weight-bold">Property</label>
                 <div col-sm-12>
                     <select id="invoicesPropertyOffcanvas" multiple name="invoicesPropertyOffcanvas" class="form-control select2">
                     </select>
